--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="memoria">Memoria</string>
     <string name="camara">Camara</string>
     <string name="uploading_photo">Subiendo Foto</string>
+
+
+
+
+    <string name="invalid_user_password">El nombre de usuario y/o la contraseña son incorrectos, por favor, intente de nuevo</string>
+
 </resources>
