--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="memoria">Memoria</string>
     <string name="camara">Camara</string>
     <string name="uploading_photo">Subiendo Foto</string>
-
+    <string name="next">Siguiente</string>
 
 
 
