--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,13 @@
     <string name="memoria">Memoria</string>
     <string name="camara">Camara</string>
     <string name="uploading_photo">Subiendo Foto</string>
-    <string name="next">Siguiente</string>
+    <string name="next_question">Siguiente</string>
 
 
 
     <string name="invalid_user_password">El nombre de usuario y/o la contraseña son incorrectos, por favor, intente de nuevo</string>
     <string name="login">Ingresar</string>
     <string name="search">Buscar</string>
+    <string name="surveys_tile">Encuestas</string>
 
 </resources>
