--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
     <string name="next_question">Siguiente</string>
 
 
-
     <string name="invalid_user_password">El nombre de usuario y/o la contraseña son incorrectos, por favor, intente de nuevo</string>
     <string name="login">Ingresar</string>
     <string name="search">Buscar</string>
     <string name="surveys_tile">Encuestas</string>
+    <string name="select_file">Seleccione el Archivo</string>
 
 </resources>
