--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="BASE_SERVICE_URL">http://estudiobbd.com/mineducacion/codeigniter/</string>
+    <string name="UPLOAD_FILE_URL">http://zyght.com/upload.php</string>
     <string name="PREFS_NAME">PREFS_NAME</string>
 
     <string name="email">Usuario</string>
