--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="PREFS_NAME">PREFS_NAME</string>
 
     <string name="email">Usuario</string>
-    <string name="password">Contraseña http://zyght.com/upload.php</string>
+    <string name="password">Contraseña</string>
     <string name="memoria">Memoria</string>
     <string name="camara">Camara</string>
     <string name="uploading_photo">Subiendo Foto</string>
@@ -20,4 +20,6 @@
     <string name="finalize">Finalizar</string>
     <string name="thanks_for_fill_the_information">Gracias por completar la información</string>
 
+
+    <string name="menu">Menú</string>
 </resources>
